public/css/styles.css
@import url("https://fonts.googleapis.com/css2?family=Ballet&family=Open+Sans&family=Roboto:ital,wght@0,400;0,700;1,400&display=swap");
* {
  padding: 0;
  margin: 0;
  border: 0;
  box-sizing: border-box;
}
/* *************************SMARTPHONE ******************************************* */
body {
  width: 100%;
  max-width: 499px;
  background-image: url(../images/cozinha2.jpg);
  background-size: 100vw 100vh;
  background-repeat: no-repeat;
  background-attachment: fixed;
  font-size: 14px;
  color: white;
  text-shadow: 2px 2px black;
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin-left: auto;
  margin-right: auto;
}
nav {
  width: 100%;
  height: 5vh;
  background: rgba(0, 0, 0, 0.5);
  display: flex;
  justify-content: left;
  align-items: center;
}
nav a {
  font-size: 1.4em;
  opacity: 0.5;
  color: white;
  text-decoration: none;
  margin-left: 10%;
}
a:hover {
  color: white;
  opacity: 1;
}
main {
  margin-left: 5%;
  margin-right: 5%;
}

section {
  width: 100%;
  margin-left: auto;
  margin-right: auto;
}
.section-story {
  margin-bottom: 2vh;
}
.section-story h1 {
  text-transform: uppercase;
  font-size: 3em;
  text-align: left;
  font-style: italic;
  text-shadow: 2px 2px black;
  margin-bottom: 1vh;
}
.section-story h2 {
  font-style: italic;
  margin-bottom: 1vh;
  text-shadow: 2px 2px black;

  font-size: 1.5em;
  text-align: left;
  font-weight: bold;
}
.section-story h3 {
  margin-bottom: 1vh;
  font-size: 2em;
  text-align: left;
  text-shadow: 2px 2px black;
}
.section-story p {
  font-size: 1.1em;
  line-height: 1.3em;
  text-align: left;
}
.img-iframe {
  margin: auto;
}
.img-iframe iframe {
  width: 350px;
  height: 30vh;

  padding-right: 5%;
  padding-left: 5%;
  border-radius: 10%;
}
.img-iframe img {
  display: none;
}
.story-dish {
  display: none;
}
.section-links {
  text-align: center;
}
.link-revenues {
  margin-top: auto;
  margin-bottom: auto;
}
.link-revenues img {
  border-radius: 10%;
  width: 100%;
  animation: up 1000ms ease-in;
  transform: opacity(15px);
  margin-bottom: 0;
  position: relative;
}
.link-revenues strong {
  position: relative;
  text-decoration: none;
  z-index: 2;
  width: 300px;
  top: -70px;
  font-size: 2em;
}
.link-revenues img:hover {
  border: 5px solid blueviolet;
  transition: border 500ms ease;
}
@keyframes up {
  from {
    opacity: 0;
    transform: translateY(15px);
  }
  to {
    opacity: 1;
  }
}
.preparation-mode {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  text-align: left;
}
.preparation-mode article {
  font-size: 1.5em;
  line-height: 1.3em;
  padding-left: 5%;
  margin-bottom: 1vh;
}
.ingredients strong {
  background-color: rgba(231, 194, 44, 0.5);
}
.mode li {
  padding-top: 2vh;
  padding-bottom: 2vh;
  border-bottom: 2px black dashed;
}
footer {
  background: rgba(0, 0, 0, 0.5);

  text-align: center;
}
footer a {
  font-size: 1em;

  opacity: 0.5;
  color: white;
}
/* ---------------------The Boss----------------------------- */
.the-boss img {
  border-radius: 50%;
  width: 60%;
  margin-top: 2vh;
}
.contato img {
  margin-top: 1vh;
  margin-bottom: 0;
  width: 10%;
}
.boss-story {
  text-align: center;
}

/* *************************TABLET ******************************************* */

@media (min-width: 500px) {
  body {
    max-width: 768px;
    min-width: 500px;
  }
  nav {
    background: rgba(0, 0, 0, 0.5);
    padding: auto;
    padding-left: 10vw;
  }
  nav a {
    font-size: 1.4em;
    padding-right: 2%;
    opacity: 0.5;
    color: white;
    text-decoration: none;
  }

  main > a {
    display: block;
    text-align: center;
  }
  section {
    margin-bottom: 2%;
    padding-top: 2%;
    width: 100%;
  }
  .section-story h1 {
    text-transform: uppercase;
    font-size: 5em;
    text-align: left;
    font-style: italic;
  }
  .section-story h2 {
    font-style: italic;
    color: gray;
    width: 90%;
    font-size: 3em;
    text-align: left;
    padding-bottom: 2vh;
  }
  .section-story h3 {
    width: 90%;
    font-size: 2.5em;
    text-align: left;
  }
  .section-story p {
    font-size: 2em;
    line-height: 1.3em;
    text-align: left;
  }
  /* -----------PG Receitas------ */
  .section-story .img-iframe {
    display: flex;
    justify-content: left;
    width: 100%;

    padding-right: 1vw;
    margin-bottom: 2vh;
  }
  .section-story .img-iframe img {
    border-radius: 10%;
    flex-grow: 1;
    margin-right: 2vw;
  }
  .section-story .img-iframe iframe {
    border-radius: 10%;
    flex-grow: 1;
  }
  .preparation-mode {
    display: flex;
  }

  .section-story .story-dish {
    display: block;
    font-size: 1.5em;
  }
  .preparation-mode article {
    font-size: 1.5em;
    line-height: 1.3em;
    margin-right: 2vw;
  }
  .ingredients {
    width: 50%;
  }
  .mode {
    width: 100%;
    align-self: bottom;
  }
  /* ___________________________________ */
  .section-links {
    display: flex;
    flex-wrap: wrap;
    width: 100%;
    justify-content: space-around;
  }
  .link-revenues {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 48%;
    margin-top: 0;
  }
  .link-revenues img {
    border-radius: 10%;
    width: 100%;
    height: 25vh;
    animation: up 1000ms ease-in;
    margin-bottom: 0;
  }
  .link-revenues a {
    width: 100%;
    text-align: center;
    text-decoration: none;
    color: white;
  }
  .link-revenues strong {
    position: relative;
    text-decoration: none;
    animation: up 1000ms ease-in;
    z-index: 2;
    width: 100%;
    top: -70px;
    font-size: 2em;
  }
  @keyframes up {
    from {
      opacity: 0;
      transform: translateY(15px);
    }
    to {
      opacity: 1;
    }
  }
  /* ---------------------The Boss----------------------------- */
  .the-boss img {
    border-radius: 50%;
    width: 30vw;
  }

  .contato img {
    margin-top: 1vh;
    margin-bottom: 0;
    width: 2.5vw;
  }
}
/* *************************Desktop******************************************* */
@media (min-width: 769px) {
  body {
    width: 100%;
    max-width: 1600px;
    min-width: 768px;
  }
  nav {
    background: rgba(0, 0, 0, 0.5);
    margin-left: 0;
    padding: 0;
  }
  nav a {
    font-size: 1.4em;
    margin-left: 5%;
    opacity: 0.5;
    color: white;
    text-decoration: none;
  }

  main > a {
    display: block;
    text-align: center;
  }
  section {
    margin-bottom: 2%;
    padding-top: 2%;
    width: 100%;
  }
  .section-story h1 {
    text-transform: uppercase;
    font-size: 5em;
    text-align: left;
    font-style: italic;
  }
  .section-story h2 {
    font-style: italic;
    color: gray;
    width: 90%;
    font-size: 3em;
    text-align: left;
    padding-bottom: 2vh;
  }
  .section-story h3 {
    width: 90%;
    font-size: 2.5em;
    text-align: left;
  }
  .section-story p {
    font-size: 2em;
    line-height: 1.3em;
    text-align: left;
  }
  /* -----------PG Receitas------ */
  .section-story .img-iframe {
    display: flex;
    justify-content: center;
    width: 100%;
    margin-left: 0;

    margin-bottom: 2vh;
  }
  .section-story .img-iframe img {
    width: 30%;
    border-radius: 10%;
    flex-grow: 1;
    margin-right: 2vw;
    display: inline-block;
  }
  .section-story .img-iframe iframe {
    padding: 0;
    border-radius: 10%;
    flex-grow: 2;
    width: 100%;
    height: 50vh;
  }
  .section-story .story-dish {
    display: block;
    font-size: 1.5em;
  }
  .preparation-mode {
    display: flex;
    flex-direction: row;
    align-items: flex-start;
  }

  .preparation-mode article {
    margin-right: 2vw;
  }
  .preparation-mode .ingredients {
    flex-grow: 1;
    font-size: 1.5em;
    line-height: 2.1em;
    border-right: 2px solid black;
    border-right-width: 0px;
    margin-right: 0px;
  }
  .preparation-mode .mode {
    padding-left: 25px;
    padding-top: 20px;
    width: 100%;
    flex-grow: 2;
    font-size: 1.5em;
    line-height: 1.7em;
    border-left: 2px solid black;
  }
  .preparation-mode h3 {
    border-bottom: 2px solid black;
  }
  .preparation-mode .mode h3 {
    position: relative;
    left: -25px;
    top: -11px;
    padding-left: 5px;
  }
  .preparation-mode a img {
    width: 70px;
    border: 5px solid black;
    border-radius: 50%;
    position: fixed;
    z-index: 3;
    right: 10px;
    bottom: 12px;
    margin-bottom: 15px;
    background-color: white;
  }
  .preparation-mode a img:hover {
    background-color: blueviolet;
  }
  /* ___________________________________ */
  .section-links {
    display: flex;
    flex-wrap: wrap;
    width: 100%;
    justify-content: space-around;
  }
  .link-revenues {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 24%;
    margin-top: 0;
  }
  .link-revenues img {
    border-radius: 10%;
    width: 100%;
    height: 25vh;
    animation: up 1000ms ease-in;
    margin-bottom: 0;
  }
  .link-revenues a {
    width: 100%;
    text-align: center;
    text-decoration: none;
    color: white;
  }
  .link-revenues img:hover {
    border: 5px solid blueviolet;
    transition: border 500ms ease;
  }
  .link-revenues strong {
    position: relative;
    text-decoration: none;
    animation: up 1000ms ease-in;
    z-index: 2;
    width: 100%;
    top: -70px;
    font-size: 2em;
  }
  @keyframes up {
    from {
      opacity: 0;
      transform: translateY(15px);
    }
    to {
      opacity: 1;
    }
  }
  /* ---------------------The Boss----------------------------- */
  .the-boss img {
    border-radius: 50%;
    width: 30vw;
  }
  .contato img {
    margin-top: 1vh;
    margin-bottom: 0;
    width: 2.5vw;
  }
  .section-story a img {
    width: 70px;
    border: 5px solid black;
    border-radius: 50%;
    position: fixed;
    z-index: 3;
    right: 10px;
    bottom: 12px;
    margin-bottom: 15px;
    background-color: white;
  }
  .section-story a img:hover {
    background-color: blueviolet;
  }
  footer {
    background: rgba(0, 0, 0, 0.5);
    text-align: center;
    position: relative;
    bottom: -3.1vh;
  }
  footer a {
    font-size: 1.5em;
    opacity: 0.5;
    color: white;
  }
}

